--- a/HelloPoint2.html
+++ b/HelloPoint2.html
@@ -10,6 +10,9 @@
   <canvas id="webgl" width="400" height="400">
     Please use a browser that supports "canvas"
   </canvas>
+  <div id="render-time">x</div>
+  <div id="delta-time">x</div>
+  <div id="total-time">x</div>
 
   <script src="lib/webgl-utils.js"></script>
   <script src="lib/webgl-debug.js"></script>
