--- a/HelloPoint2.html
+++ b/HelloPoint2.html
@@ -7,11 +7,12 @@
 </head>
 
 <body onload="">
-  <canvas id="webgl" width="400" height="400">
+    <canvas id="webgl" width="400" height="400">
     Please use a browser that supports "canvas"
   </canvas>
   <div id="render-time">x</div>
   <div id="delta-time">x</div>
+  <div id="budget">x</div>
   <div id="total-time">x</div>
 
   <script src="lib/webgl-utils.js"></script>
