--- a/HelloPoint2.html
+++ b/HelloPoint2.html
@@ -11,9 +11,10 @@
     Please use a browser that supports "canvas"
   </canvas>
   <div id="render-time">x</div>
+  <div id="total-time">x</div>
   <div id="delta-time">x</div>
   <div id="budget">x</div>
-  <div id="total-time">x</div>
+  <div id="elapsed-time">x</div>
 
   <script src="lib/webgl-utils.js"></script>
   <script src="lib/webgl-debug.js"></script>
