--- a/HelloPoint2.html
+++ b/HelloPoint2.html
@@ -6,15 +6,70 @@
   <title>Hello Point (2)</title>
 </head>
 
-<body onload="">
+<style>
+  .canvas-container {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
+    background-color: darkslategrey;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .canvas-message {
+    position: absolute;
+    color: white;
+  }
+
+  .divider {
+    height: 0.5px;
+    background-color: lightgray;
+    margin: 10px 0;
+  }
+</style>
+
+<body>
+  <div class="canvas-container">
+    <div class="canvas-message">
+      Press "Start" to begin
+    </div>
     <canvas id="webgl" width="400" height="400">
-    Please use a browser that supports "canvas"
-  </canvas>
-  <div id="render-time">x</div>
-  <div id="total-time">x</div>
-  <div id="delta-time">x</div>
-  <div id="budget">x</div>
-  <div id="elapsed-time">x</div>
+      Please use a browser that supports "canvas"
+    </canvas>
+  </div>
+
+  <div class="divider"></div>
+
+  <label for="circle-count">Circle Count:</label>
+  <input type="text" id="circle-count" value="1">
+  <label for="max-radius">Max Radius:</label>
+  <input type="text" id="max-radius" value="1">
+
+  <div class="divider"></div>
+
+  <label for="growth-rate">Growth Rate:</label>
+  <input type="text" id="growth-rate" value="1">
+
+  <label for="start-growth-delay">Start Growth Delay:</label>
+  <input type="text" id="start-growth-delay" value="1">
+
+  <div class="divider"></div>
+
+  <input type="button" id="start" value="Start">
+  <input type="button" id="reload" value="Reload">
+
+  <div class="divider"></div>
+
+  <div id="render-time">Render Time: --</div>
+  <div id="total-time">Total Time: --</div>
+  <div id="delta-time">Delta Time: --</div>
+  <div id="budget">Load: --</div>
+  <div id="elapsed-time">Elapsed Time: --</div>
 
   <script src="lib/webgl-utils.js"></script>
   <script src="lib/webgl-debug.js"></script>
