--- a/a1.html
+++ b/a1.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Hello Point (2)</title>
+  <title>Assignment 1</title>
 </head>
 
 <style>
@@ -74,7 +74,7 @@
   <script src="lib/webgl-utils.js"></script>
   <script src="lib/webgl-debug.js"></script>
   <script src="lib/cuon-utils.js"></script>
-  <script src="HelloPoint2.js"></script>
+  <script src="a1.js"></script>
 </body>
 
 </html>
