--- a/a1.html
+++ b/a1.html
@@ -11,6 +11,27 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
+    position: relative;
+  }
+
+  .winner-banner {
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    transition: opacity 0.5s;
+    opacity: 0;
+    pointer-events: none;
   }
 
   .canvas-container {
@@ -59,10 +80,30 @@
     transition: border 0.5s, width 0.1s, color 0.5s, background-color 0.5s;
     box-sizing: border-box;
   }
+
+  .stats-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+    gap: 16px;
+  }
+
+  .vert-divider {
+    background-color: lightgray;
+    width: 0.5px;
+  }
+
+  .tech-stats-container {
+    min-width: 300px;
+  }
 </style>
 
 <body>
   <div class="main-section">
+    <div class="winner-banner" id="winner-banner">
+      <h1 id="winner-banner-message">Winner!</h1>
+      <h5>Press "Reload" to play again.</h5>
+    </div>
     <div class="canvas-container">
       <div class="canvas-message">
         Press "Start" to begin
@@ -101,11 +142,21 @@
 
   <div class="divider"></div>
 
-  <div id="render-time">Render Time: --</div>
-  <div id="total-time">Total Time: --</div>
-  <div id="delta-time">Delta Time: --</div>
-  <div id="budget">Load: --</div>
-  <div id="elapsed-time">Elapsed Time: --</div>
+  <div class="stats-container">
+    <div class="tech-stats-container">
+      <div id="fps">FPS: --</div>
+      <div id="render-time">Render Time: --</div>
+      <div id="total-time">Total Time: --</div>
+      <div id="delta-time">Delta Time: --</div>
+      <div id="budget">Load: --</div>
+      <div id="elapsed-time">Elapsed Time: --</div>
+    </div>
+    <div class="vert-divider"></div>
+    <div>
+      <div id="user-score">User Score: --</div>
+      <div id="game-score">Game Score: --</div>
+    </div>
+  </div>
 
 
   <script src="lib/webgl-utils.js"></script>
