--- a/a1.html
+++ b/a1.html
@@ -12,6 +12,7 @@
     align-items: center;
     margin-top: 20px;
     position: relative;
+    gap: 16px;
   }
 
   .winner-banner {
@@ -96,6 +97,29 @@
   .tech-stats-container {
     min-width: 300px;
   }
+
+  .score-container {
+    position: relative;
+  }
+
+  .score-popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    transition: opacity 0.5s;
+    opacity: 0;
+    pointer-events: none;
+  }
 </style>
 
 <body>
@@ -152,9 +176,20 @@
       <div id="elapsed-time">Elapsed Time: --</div>
     </div>
     <div class="vert-divider"></div>
-    <div>
-      <div id="user-score">User Score: --</div>
-      <div id="game-score">Game Score: --</div>
+    <div class="score-container">
+      <p>
+        Game gains scores as time passes and when any bacterium reaches its maximum size.
+        You gain points by killing the bacteria. If you kill two bacteria quickly, you get bonus points.
+      </p>
+      <div class="divider"></div>
+      <h4 id="helper-score">Target Score is -- (updates when game starts). The player with this score wins!</h4>
+      <div class="divider"></div>
+      <h2 id="user-score">User Score: --</h2>
+      <h2 id="game-score">Game Score: --</h2>
+
+      <div class="score-popup" id="score-popup">
+        <h3 id="score-popup-message"></h3>
+      </div>
     </div>
   </div>
 
