--- a/a1/a1.html
+++ b/a1/a1.html
@@ -194,9 +194,9 @@
   </div>
 
 
-  <script src="lib/webgl-utils.js"></script>
-  <script src="lib/webgl-debug.js"></script>
-  <script src="lib/cuon-utils.js"></script>
+  <script src="../lib/webgl-utils.js"></script>
+  <script src="../lib/webgl-debug.js"></script>
+  <script src="../lib/cuon-utils.js"></script>
   <script src="a2.js"></script>
 </body>
 
